==> apache/nuttx/arch/arm/src/nrf52/nrf52_pwm.c <==
#include <nuttx/config.h>
#include <inttypes.h>
#include <stdint.h>
#include <stdio.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <arch/board/board.h>
#include "arm_internal.h"
#include "arm_arch.h"
#include "nrf52_gpio.h"
#include "nrf52_pwm.h"
#include "hardware/nrf52_pwm.h"
#define PWM_POLARITY_DEFAULT (PWM_DECODER_POL_FALLING)
#define PWM_SEQ0_LEN         (4)

static inline void nrf52_pwm_putreg(FAR struct nrf52_pwm_s *priv,
                                    uint32_t offset,
                                    uint32_t value)
{
  putreg32(value, priv->base + offset);
}

static inline uint32_t nrf52_pwm_getreg(FAR struct nrf52_pwm_s *priv,
                                        uint32_t offset)
{
  return getreg32(priv->base + offset);
}

static int nrf52_pwm_setup(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct nrf52_pwm_s *priv = (FAR struct nrf52_pwm_s *)dev;
  int                     ret  = OK;
  uint32_t                regval = 0;
  uint32_t                pin = 0;
  uint32_t                port = 0;

  DEBUGASSERT(dev);

  /* Configure channels */

  if (priv->ch0_pin != 0)
    {
      nrf52_gpio_config(priv->ch0_pin);

      pin  = GPIO_PIN_DECODE(priv->ch0_pin);
      port = GPIO_PORT_DECODE(priv->ch0_pin);

      regval = (port << PWM_PSEL_PORT_SHIFT);
      regval |= (pin << PWM_PSEL_PIN_SHIFT);

      nrf52_pwm_putreg(priv, NRF52_PWM_PSEL0_OFFSET, regval);
    }

  if (priv->ch1_pin != 0)
    {
      nrf52_gpio_config(priv->ch1_pin);

      pin  = GPIO_PIN_DECODE(priv->ch1_pin);
      port = GPIO_PORT_DECODE(priv->ch1_pin);

      regval = (port << PWM_PSEL_PORT_SHIFT);
      regval |= (pin << PWM_PSEL_PIN_SHIFT);

      nrf52_pwm_putreg(priv, NRF52_PWM_PSEL1_OFFSET, regval);
    }

  if (priv->ch2_pin != 0)
    {
      nrf52_gpio_config(priv->ch2_pin);

      pin  = GPIO_PIN_DECODE(priv->ch2_pin);
      port = GPIO_PORT_DECODE(priv->ch2_pin);

      regval = (port << PWM_PSEL_PORT_SHIFT);
      regval |= (pin << PWM_PSEL_PIN_SHIFT);

      nrf52_pwm_putreg(priv, NRF52_PWM_PSEL2_OFFSET, regval);
    }

  if (priv->ch3_pin != 0)
    {
      nrf52_gpio_config(priv->ch3_pin);

      pin  = GPIO_PIN_DECODE(priv->ch3_pin);
      port = GPIO_PORT_DECODE(priv->ch3_pin);

      regval = (port << PWM_PSEL_PORT_SHIFT);
      regval |= (pin << PWM_PSEL_PIN_SHIFT);

      nrf52_pwm_putreg(priv, NRF52_PWM_PSEL3_OFFSET, regval);
    }

  /* Configure PWM */

  ret = nrf52_pwm_configure(priv);
  if (ret < 0)
    {
      pwmerr("ERROR: nrf52_pwm_configure failed %d\n", ret);
      goto errout;
    }

  /* Enable PWM */

  nrf52_pwm_putreg(priv, NRF52_PWM_ENABLE_OFFSET, 1);

errout:
  return ret;
}

static int nrf52_pwm_shutdown(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct nrf52_pwm_s *priv = (FAR struct nrf52_pwm_s *)dev;
  int                     ret  = OK;

  DEBUGASSERT(dev);

  /* Disable PWM */

  nrf52_pwm_putreg(priv, NRF52_PWM_ENABLE_OFFSET, 0);

  return ret;
}

static int nrf52_pwm_start(FAR struct pwm_lowerhalf_s *dev,
                           FAR const struct pwm_info_s *info,
                           FAR void *handle)
{
#error Not supported
}

static int nrf52_pwm_start(FAR struct pwm_lowerhalf_s *dev,
                           FAR const struct pwm_info_s *info)
{
  FAR struct nrf52_pwm_s *priv = (FAR struct nrf52_pwm_s *)dev;
  int                     ret  = OK;
#ifdef CONFIG_PWM_MULTICHAN
  int                     i    = 0;
#endif

  DEBUGASSERT(dev);

  /* If frequency has not changed we just update duty */

  if (info->frequency != priv->frequency)
    {
      /* Update frequency */

      ret = nrf52_pwm_freq(priv, info->frequency);

      if (ret == OK)
        {
          priv->frequency = info->frequency;
        }
    }

#ifdef CONFIG_PWM_MULTICHAN
      for (i = 0; ret == OK && i < CONFIG_PWM_NCHANNELS; i++)
        {
          /* Break the loop if all following channels are not configured */

          if (info->channels[i].channel == -1)
            {
              break;
            }

          /* Set output if channel configured */

          if (info->channels[i].channel != 0)
            {
              ret = nrf52_pwm_duty(priv,
                                   (info->channels[i].channel - 1),
                                   info->channels[i].duty);
            }
        }

#else
      ret = nrf52_pwm_duty(dev,
                           (info->channels[0].channel - 1),
                           info->duty);
#endif /* CONFIG_PWM_MULTICHAN */

  /* Start sequence 0 */

  nrf52_pwm_putreg(priv, NRF52_PWM_TASKS_SEQSTART0_OFFSET, 1);

  /* Wait for sequence started */

  while (nrf52_pwm_getreg(priv, NRF52_PWM_EVENTS_SEQSTARTED0_OFFSET) != 1);

  return ret;
}

static int nrf52_pwm_stop(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct nrf52_pwm_s *priv = (FAR struct nrf52_pwm_s *)dev;

  DEBUGASSERT(dev);

  /* Stop PWM */

  nrf52_pwm_putreg(priv, NRF52_PWM_TASKS_STOP_OFFSET, 1);

  /* Wait for PWM stopped */

  while (nrf52_pwm_getreg(priv, NRF52_PWM_EVENTS_STOPPED_OFFSET) != 1);

  return OK;
}

FAR struct pwm_lowerhalf_s *nrf52_pwminitialize(int pwm)
{
  struct nrf52_pwm_s *lower = NULL;

  pwminfo("Initialize PWM%u\n", pwm);

  switch (pwm)
    {
#ifdef CONFIG_NRF52_PWM0
      case 0:
        {
          lower = &g_nrf52_pwm0;
          break;
        }
#endif

#ifdef CONFIG_NRF52_PWM1
      case 1:
        {
          lower = &g_nrf52_pwm1;
          break;
        }
#endif

#ifdef CONFIG_NRF52_PWM2
      case 2:
        {
          lower = &g_nrf52_pwm2;
          break;
        }
#endif

#ifdef CONFIG_NRF52_PWM3
      case 3:
        {
          lower = &g_nrf52_pwm3;
          break;
        }
#endif

      default:
        {
          pwmerr("ERROR: No such PWM device %d\n", pwm);
          lower = NULL;
          goto errout;
        }
    }

errout:
  return (struct pwm_lowerhalf_s *)lower;
}
